--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -126,8 +126,9 @@
                     <h4>Samples</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Dig into the steps to know more about sample measurements and explore the provenance graph to see
-                        how your data has been transformed
+                        Dig into the steps to know more about sample measurements and explore the provenance graph to
+                        see
+                        how your sample has been transformed
                     </p>
                 </div>
             </div>
@@ -187,10 +188,10 @@
                             <li>Create once and reuse. Keep track of history of changes.</li>
                             <li>Share between different projects</li>
                             <li>Track how your sample has undergone transformation through hierarchy.</li>
-                            <li>Ability to store multiple measures – look at history n change best value</li>
-                            <li>Take a look back at the history of measures and freely edit your best value measured.
+                            <li>Ability to store multiple measures</li>
+                            <li>Take a look back at the history of measures and freely edit your best value measure.
                             </li>
-                            <li>Support different types of measures : histogram, scatter plot, integer, string etc.</li>
+                            <li>Support different types of measures : histogram, charts, integer, string etc.</li>
                         </ul>
                     </div>
                 </div>
@@ -229,7 +230,7 @@
                     <h4>Versions</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Easy way to look back in time for the old versions of your files.</p>
+                        Easy way to pull old versions of your files.</p>
                 </div>
             </div>
         </div>
@@ -255,8 +256,8 @@
 
                     <div style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
                         <ul>
-                            <li>Ask your adviser / researchers / collaborators to look at your data.</li>
-                            <li>Attach data and Share your thoughts with your team mates.</li>
+                            <li>Ask your researchers / collaborators to look at your data.</li>
+                            <li>Attach data and share your thoughts with your team mates.</li>
                             <li>Reviews helps to see if your team mates have followed up with leads you're working
                                 together and helps your team stay in sync
                             </li>
@@ -425,6 +426,46 @@
                 </div>
                 <div class="col-xs-5">
                     <img src="assets/img/splash/note.png">
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                <div class="row">
+                    <i class="fa fa-fw fa-font fa-4x"></i>
+                </div>
+                <div class="row">
+                    <h4>Styling</h4>
+
+                    <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
+                        Style your notes with these amazing styling techniques
+                    </p>
+                </div>
+            </div>
+            <div class="col-xs-offset-1 col-xs-2">
+                <div class="row">
+                    <i class="fa fa-fw fa-link fa-4x"></i>
+                </div>
+                <div class="row">
+                    <h4>Add Links</h4>
+
+                    <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
+                        Add links to your notes
+                    </p>
+                </div>
+            </div>
+            <div class="col-xs-offset-1 col-xs-2">
+                <div class="row">
+                    <i class="fa fa-fw fa-file-image-o  fa-4x"></i>
+                </div>
+                <div class="row">
+                    <h4>Attach Images</h4>
+
+                    <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
+                        Easy image uploads into your notes.
+                    </p>
                 </div>
             </div>
         </div>
