updated calendar size

--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -497,7 +497,7 @@
 
                 </div>
                 <div class="col-xs-6">
-                    <img src="assets/img/splash/calendar.png">
+                    <img style="width: 700px; height: 500px;"  src="assets/img/splash/calendar.png">
                 </div>
             </div>
         </div>
