--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -272,7 +272,7 @@
 
                 </div>
                 <div class="col-xs-4">
-                    <img style="width: 600px; height: 300px;" src="assets/img/splash/review.png">
+                    <img style="width: 650px; height: 500px;" src="assets/img/splash/review.png">
                 </div>
 
             </div>
@@ -330,7 +330,7 @@
         <div class="row">
             <div class="col-xs-offset-1">
                 <div class="col-xs-6">
-                    <img src="assets/img/splash/file.png">
+                    <img style="width: 650px; height: 500px;" src="assets/img/splash/file.png">
                 </div>
 
                 <div class="col-xs-6">
