--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top: 30px;">
             <div class="col-xs-offset-1 col-xs-2">
                 <div class="row">
                     <i class="fa fa-fw fa-cubes fa-4x"></i>
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top: 30px;">
             <div class="col-xs-offset-1 col-xs-2">
                 <div class="row">
                     <i class="fa fa-fw fa-flask fa-4x"></i>
@@ -273,7 +273,7 @@
 
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top: 30px;">
             <div class="col-xs-offset-1 col-xs-2">
                 <div class="row">
                     <i class="fa fa-fw fa-check-circle review-open fa-4x"></i>
@@ -347,7 +347,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="padding-top: 30px;">
             <div class="col-xs-offset-1 col-xs-2">
                 <div class="row">
                     <i class="fa fa-fw fa-upload fa-4x"></i>
@@ -422,7 +422,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top: 30px;">
             <div class="col-xs-offset-1 col-xs-2">
                 <div class="row">
                     <i class="fa fa-fw fa-font fa-4x"></i>
@@ -463,7 +463,7 @@
     </div>
     <br><br>
 
-    <div class="row note-splash" id="calendar01">
+    <div class="row calendar-splash" id="calendar01">
         <div class="row">
             <ul class="nav pull-right scroll-top corner">
                 <li><a ng-click="goTo('top')" title="Scroll to top" style="color: white;">
