--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -42,42 +42,31 @@
         </header>
     </div>
     <div class="row icon-splash">
-        <div class="col-xs-offset-2">
-            <div class="col-xs-1" style="padding-right: 150px;"><a ng-click="goTo('process01')"><img
+        <ul class="list-inline text-center">
+            <li><a ng-click="goTo('process01')"><img
                     style="height: 60px;"
                     src="assets/img/splash/process-icon.png"></a>
 
-                <p style="color: grey;padding-top: 8px;">PROVENANCE</p>
-            </div>
-            <div class="col-xs-1" style="padding-right: 150px;"><a ng-click="goTo('sample01')"> <img
+                <p style="color: grey;padding-top: 8px;">PROVENANCE</p></li>
+            <li><a ng-click="goTo('sample01')"> <img
                     style="height: 60px;"
                     src="assets/img/splash/sample_icon.png"></a>
 
-                <p style="color: grey;padding-top: 8px;">SAMPLE</p>
-            </div>
-            <div class="col-xs-1" style="padding-right: 150px;"><a ng-click="goTo('review01')"><img
+                <p style="color: grey;padding-top: 8px;">SAMPLE</p></li>
+            <li><a ng-click="goTo('review01')"><img
                     style="height: 60px;"
                     src="assets/img/splash/review_icon.png"></a>
 
-                <p style="color: grey;padding-top: 8px;">REVIEW</p>
-            </div>
-            <div class="col-xs-1" style="padding-right: 150px;"><a ng-click="goTo('file01')"><img style="height: 60px;"
-                                                                                                  src="assets/img/splash/file_icon.png"></a>
+                <p style="color: grey;padding-top: 8px;">REVIEW</p></li>
+            <li><a ng-click="goTo('file01')"><img style="height: 60px;"
+                                                  src="assets/img/splash/file_icon.png"></a>
 
-                <p style="color: grey;padding-top: 8px;padding-left: 15px;">FILE</p>
-            </div>
-            <div class="col-xs-1" style="padding-right: 150px;"><a ng-click="goTo('notes01')"><img style="height: 60px;"
-                                                                                                   src="assets/img/splash/note_icon.png"></a>
+                <p style="color: grey;padding-top: 8px;padding-left: 15px;">FILE</p></li>
+            <li><a ng-click="goTo('notes01')"><img style="height: 60px;"
+                                                   src="assets/img/splash/note_icon.png"></a>
 
-                <p style="color: grey;padding-top: 8px;padding-left: 15px;">NOTE</p>
-            </div>
-            <div class="col-xs-2" style="padding-right: 150px;"><a ng-click="goTo('calendar01')"><img
-                    style="height: 60px;"
-                    src="assets/img/splash/calendar_icon.png"></a>
-
-                <p style="color: grey;padding-top: 5px;">CALENDAR</p>
-            </div>
-        </div>
+                <p style="color: grey;padding-top: 8px;padding-left: 15px;">NOTE</p></li>
+        </ul>
     </div>
     <div class="row process-splash" id="process01">
         <div class="row">
@@ -97,11 +86,11 @@
 
                     <div style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
                         <ul>
-                            <li>Have a quick overview or dive into rich details about your steps.</li>
-                            <li>Dig deep into processes to know how your data is linked though provenance or
+                            <li>You can get a quick overview or dive into rich details about your workflow</li>
+                            <li>Dig deep into processes to see how your data is linked though provenance or
                                 discover relationships between processes
                             </li>
-                            <li>Track your experiment or computational settings.</li>
+                            <li>Track your experimental or computational settings</li>
                             <li>Rich graphical views</li>
                         </ul>
                     </div>
@@ -124,9 +113,8 @@
                     <h4>Samples</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Dig into the steps to know more about sample measurements and explore the provenance graph to
-                        see
-                        how your sample has been transformed
+                        Look into the steps to see your sample measurements or explore the provenance graph to
+                        see how your sample has been transformed.
                     </p>
                 </div>
             </div>
@@ -150,15 +138,13 @@
                     <h4>Workflow</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Workflows assist scientists and programmers to track their
-                        data through all transformations, analyses, and interpretations.
+                        Workflows assist researchers in tracking their
+                        data through all its transformations, analyses, and interpretations.
                     </p>
                 </div>
             </div>
         </div>
     </div>
-    <br><br>
-
     <div class="row sample-splash" id="sample01">
         <div class="row">
             <ul class="nav pull-right scroll-top corner">
@@ -183,13 +169,13 @@
 
                     <div style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
                         <ul>
-                            <li>Create once and reuse. Keep track of history of changes.</li>
+                            <li>Create once and reuse. Keep track of history of changes</li>
                             <li>Share between different projects</li>
-                            <li>Track how your sample has undergone transformation through hierarchy.</li>
+                            <li>Track how your sample has undergone transformations</li>
                             <li>Ability to store multiple measures</li>
-                            <li>Take a look back at the history of measures and freely edit your best value measure.
+                            <li>Take a look back at the history of measures and easily edit your sample's properties
                             </li>
-                            <li>Support different types of measures : histogram, charts, integer, string etc.</li>
+                            <li>Supports different types of measures : histogram, charts, integer, string etc...</li>
                         </ul>
                     </div>
                 </div>
@@ -226,7 +212,7 @@
                     <h4>Versions</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Easy way to pull old versions of your files.</p>
+                        Easy way to view your sample's history of transformations.</p>
                 </div>
             </div>
         </div>
@@ -252,13 +238,12 @@
 
                     <div style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
                         <ul>
-                            <li>Ask your researchers / collaborators to look at your data.</li>
-                            <li>Attach data and share your thoughts with your team mates.</li>
-                            <li>Reviews helps to see if your team mates have followed up with leads you're working
-                                together and helps your team stay in sync
+                            <li> Easily request other project members to look at your data</li>
+                            <li>Attach data and share your thoughts with your team mates</li>
+                            <li>Correspondence history helps your team stay in sync
                             </li>
-                            <li>Manage your conversations in a better way at one place</li>
-                            <li>Relax....we will notify you when you have any new messages or requests when you log-back
+                            <li>Manage your conversations in a better way in one place</li>
+                            <li>Relax... we will notify you when you have any new messages or requests when you log-back
                                 in.
                             </li>
                         </ul>
@@ -268,7 +253,7 @@
 
                 </div>
                 <div class="col-xs-4">
-                    <img style="width: 550px; height: 400px;" src="assets/img/splash/review.png">
+                    <img style="width: 500px; height: 400px;" src="assets/img/splash/review.png">
                 </div>
 
             </div>
@@ -282,7 +267,7 @@
                     <h4>Active Review</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Is a state where users can actively communicate back and forth.
+                        Quickly see which reviews are active and have new messages.
                     </p>
                 </div>
             </div>
@@ -294,7 +279,7 @@
                     <h4> Archived Review</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Review can be closed at any point of time.
+                        Go back to your archived reviews to establish context.
                     </p>
                 </div>
             </div>
@@ -306,7 +291,7 @@
                     <h4>Attachments</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Attach files / samples/ processes and request for a review.
+                        Attach files/samples/processes to a review.
                     </p>
                 </div>
             </div>
@@ -336,11 +321,11 @@
 
                     <div style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
                         <ul>
-                            <li>Materials-Commons provides multiple simultaneous, stable and resumable uploads.</li>
-                            <li>Easy download and preview of your files</li>
-                            <li>Ability to add subfolders for easy management of your data.</li>
-                            <li>Easily you can get back to your old versions of a file.</li>
-                            <li>Compare and analyze files side by side by dragging them onto sideboard.</li>
+                            <li>MaterialsCommons provides multiple simultaneous and resumable uploads</li>
+                            <li>Easy download and preview your files</li>
+                            <li>Ability to add subfolders for easy management of your data</li>
+                            <li>Go back to old versions of a file</li>
+                            <li>Compare and analyze files side by side</li>
                         </ul>
                     </div>
                 </div>
@@ -356,7 +341,7 @@
                     <h4>Upload</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Easy upload from your local system onto Materials Commons
+                        Easy upload from your local system onto Materials Commons.
                     </p>
                 </div>
             </div>
@@ -368,7 +353,7 @@
                     <h4> Download</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Helps you to download files onto your local system
+                        Helps you to download files onto your local system.
                     </p>
                 </div>
             </div>
@@ -380,7 +365,7 @@
                     <h4>Refresh</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Refresh the file structure to view all the new uploads
+                        Refresh the file structure to view all updates.
                     </p>
                 </div>
             </div>
@@ -406,10 +391,10 @@
 
                     <div style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
                         <ul>
-                            <li>Simply jot down lines and style your text with our editor.</li>
-                            <li>Manage all your notes at one place.</li>
-                            <li>Attach notes to samples or files or projects to help memorize your updates to them</li>
-                            <li>Tag your notes to make it searchable.</li>
+                            <li>Simply jot down lines and style your text with our editor</li>
+                            <li>Manage all your notes in one place</li>
+                            <li>Attach notes to samples/files/projects</li>
+                            <li>Tag your notes to help you easily find them</li>
                         </ul>
                     </div>
 
@@ -431,7 +416,7 @@
                     <h4>Styling</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Style your notes with these amazing styling techniques
+                        Style your notes using a rich text editor.
                     </p>
                 </div>
             </div>
@@ -443,7 +428,7 @@
                     <h4>Add Links</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Add links to your notes
+                        Add links to your notes.
                     </p>
                 </div>
             </div>
@@ -455,7 +440,7 @@
                     <h4>Attach Images</h4>
 
                     <p style="color: grey; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Easy image uploads into your notes.
+                        The rich text editor allows you to to attach images to your notes.
                     </p>
                 </div>
             </div>
@@ -463,7 +448,7 @@
     </div>
     <br><br>
 
-    <div class="row calendar-splash" id="calendar01">
+    <div ng-if="false" class="row calendar-splash" id="calendar01">
         <div class="row">
             <ul class="nav pull-right scroll-top corner">
                 <li><a ng-click="goTo('top')" title="Scroll to top" style="color: white;">
@@ -479,16 +464,18 @@
                     </div>
                     <br>
 
-                    <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        Helps you to keep track of events by date.
-                    </p>
-
+                    <div style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
+                        <ul>
+                            <li>Easily review your progress</li>
+                            <li>Quickly get to items on a particular day</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-xs-1">
 
                 </div>
                 <div class="col-xs-6">
-                    <img style="width: 650px; height: 500px;"  src="assets/img/splash/calendar.png">
+                    <img style="width: 650px; height: 500px;" src="assets/img/splash/calendar.png">
                 </div>
             </div>
         </div>
