--- a/website/app/index.html
+++ b/website/app/index.html
@@ -15,7 +15,7 @@
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="assets/ico/mc-favicon.ico">
 
-    <!-- build:css assets/css/style.css -->
+    <!-- build:css style.css -->
     <link href="assets/css/bootstrap.css"  rel="stylesheet">
     <link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="assets/css/select2/select2.css" rel="stylesheet">
