Move where style-3 is located.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -15,7 +15,7 @@
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="assets/ico/mc-favicon.ico">
 
-    <!-- build:css style.css -->
+    <!-- build:css assets/css/style.css -->
     <link href="assets/css/bootstrap.css"  rel="stylesheet">
     <link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="assets/css/select2/select2.css" rel="stylesheet">
@@ -33,7 +33,7 @@
     <link href="assets/css/fullcalendar.css" rel="stylesheet">
     <link href="assets/css/nsPopover.css" rel="stylesheet">
     <!-- Application style sheet -->
-    <link href="style-3.css" rel="stylesheet">
+    <link href="assets/css/style-3.css" rel="stylesheet">
     <!-- endbuild -->
 </head>
 <body>
