fixed splash page in safari

--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -5,7 +5,7 @@
                 <h1 style="color: white; padding: 30px;">Materials Commons</h1>
             </div>
             <div class="row">
-                <div class="login-splash">
+                <div class="col-xs-5 col-xs-offset-3 login-splash">
                     <div class="row">
                         <input ng-model="email" name="email" required="" class="form-control"
                                placeholder="Email..."
