--- a/website/app/index.html
+++ b/website/app/index.html
@@ -33,6 +33,7 @@
     <link href="assets/css/handsontable.full.css" rel="stylesheet">
     <link href="assets/css/ng-tags-input.css" rel="stylesheet">
     <!-- Application style sheet -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <link href="style-3.css" rel="stylesheet">
     <!-- endbuild -->
 </head>
@@ -230,6 +231,8 @@
 <script src="application/core/projects/project/notes/notes-controller.js"></script>
 <script src="application/core/projects/project/notes/create-note.js"></script>
 <script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
+<script src="application/core/projects/project/modal/files-modal-controller.js"></script>
+<script src="application/core/projects/project/modal/process-modal-controller.js"></script>
 
 <script src="application/core/projects/project/tab-control-bar.js"></script>
 <script src="application/core/projects/project/project-description-directive.js"></script>
