--- a/website/app/application/core/projects/project/reviews/create.html
+++ b/website/app/application/core/projects/project/reviews/create.html
@@ -30,7 +30,8 @@
         <div class="col-xs-12 headings">Attachment</div>
         <div class="row" style="padding: 15px;">
             <br>
-            <button style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 " class="btn btn-default"><i
+            <button data-toggle="modal" data-target=".bs-example-modal-lg"
+                    style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 " class="btn btn-default"><i
                     class="fa fa-fw fa-plus"></i> ADD
             </button>
             <br><br>
@@ -60,6 +61,55 @@
         </div>
         <div class="col-xs-3">
             <button class=" btn btn-default btn-review  btn-details-container">Send</button>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade bs-example-modal-lg" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Attachments</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist" id="myTab">
+                        <li class="active"><a data-target="#1" data-toggle="tab">Files</a></li>
+                        <li><a data-target="#2" data-toggle="tab">Samples</a></li>
+                        <li><a data-target="#3" data-toggle="tab">Processes</a></li>
+
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="1">
+                            <div style="padding: 10px;">
+                                <div modal-files project="project"></div>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="2">
+                            <div style="padding: 10px;">
+
+                                <div home-samples project="project"></div>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="3">
+                            <div style="padding: 10px;">
+
+                                <div modal-processes project="project"></div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
         </div>
     </div>
 </div>
