--- a/website/app/application/core/projects/project/reviews/edit.html
+++ b/website/app/application/core/projects/project/reviews/edit.html
@@ -1,68 +1,78 @@
 <div class="details-main-content">
-        <div class="row">
-                <div class="col-xs-5">
-                    <div class="headings">Requested By</div>
+    <div class="row" style="padding: 10px;color: #C0C0C0">
+        {{(review.messages[(review.messages.length -1)].date)}}
+    </div>
+    <div class="row">
+        <div class="col-xs-5">
+            <div class="headings">Requested By</div>
+            <div style="padding-left: 10px; ">
+
                         <span class="fa-stack fa-lg">
                             <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                             <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
                         </span>
-                    <span class="who"> {{review.author}} </span>
-                </div>
-
-                <div class="col-xs-5 col-xs-offset-1">
-                    <div class="headings">Assigned To</div>
-                        <span class="fa-stack fa-lg">
-                            <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
-                            <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
-                        </span>
-                    <span class="who">{{review.assigned_to}}</span>
-                </div>
-        </div>
-        <hr class="divider"/>
-
-        <div class="row">
-            <div class="col-xs-12 headings">Attachment</div>
-
-            <div ng-repeat="attachment in review.attachments">
-                <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i><a class="link pointer">{{attachment.name}}</a>
+                <span class="who"> {{review.author}} </span>
             </div>
         </div>
-        <hr class="divider"/>
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="headings">Comments</div>
-                <div style="padding-left: 10px;">
-                    <ul class="list-group">
-                        <li class="list-group-item" style="border: none;" ng-repeat="message in review.messages">
+
+        <div class="col-xs-5 col-xs-offset-1">
+            <div class="headings">Assigned To</div>
+                        <span class="fa-stack fa-lg">
+                            <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
+                            <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
+                        </span>
+            <span class="who">{{review.assigned_to}}</span>
+        </div>
+    </div>
+    <hr class="divider"/>
+
+    <div class="row">
+        <div class="col-xs-6">
+            <div class="headings">Attachment</div>
+
+            <div class="row" ng-repeat="attachment in review.attachments">
+                <div style="padding-left: 10px;line-height: 35px;">
+                    <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i><a class="link">{{attachment.name}}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr class="divider"/>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="headings">Comments</div>
+            <div>
+                <ul class="list-group">
+                    <li class="list-group-item" style="border: none;" ng-repeat="message in review.messages">
                             <span class="fa-stack fa-lg">
                                 <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                                 <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
                             </span>
-                            <span class="who">{{message.who}}</span>
+                        <span class="who">{{message.who}}</span>
 
-                            <div style="padding-left: 15px;padding-top: 10px;" ta-bind ng-model="message.message"
-                                 class="row"></div>
-                            <small style="padding-left: 15px;" class="text-muted">{{message.date}}</small>
-                        </li>
-                    </ul>
-                    <div class="row">
-                        <div class="col-xs-7">
+                        <div style="padding-left: 15px;padding-top: 10px;" ta-bind ng-model="message.message"
+                             class="row"></div>
+                        <small style="padding-left: 15px;" class="text-muted">{{message.date}}</small>
+                    </li>
+                </ul>
+                <div class="row">
+                    <div class="col-xs-7">
                             <textarea placeholder="Add a comment..." class="form-control"
-                                ng-model="model.comment"></textarea>
-                        </div>
-                        <div class="col-xs-3">
-                            <button ng-click="addComment()"
-                                    class="btn btn-success btn-review btn-details-container">Comment
-                            </button>
-                        </div>
+                                      ng-model="model.comment"></textarea>
+                    </div>
+                    <div class="col-xs-3">
+                        <button ng-click="addComment()"
+                                class="btn btn-success btn-review btn-details-container">Comment
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-xs-12">
-                <i class="fa fa-fw fa-archive fa-lg link"></i> <a class="link pointer">CLOSE AND ARCHIVE</a>
-            </div>
+    <div class="row">
+        <div style="padding: 25px;">
+            <i class="fa fa-fw fa-archive fa-lg close-link"></i> <a class="close-link">CLOSE AND ARCHIVE</a>
         </div>
+    </div>
 </div>
