updates to reviews and processes directives

--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -74,7 +74,8 @@
             <file-upload-panel></file-upload-panel>
             <mc-tree items="files"
                      matches="matchingFiles"
-                     orderby="'name'">
+                     orderby="'name'"
+                     >
             </mc-tree>
         </div>
     </div>
