--- a/website/app/index.html
+++ b/website/app/index.html
@@ -32,6 +32,9 @@
     <link href="assets/css/nsPopover.css" rel="stylesheet">
     <link href="assets/css/handsontable.full.css" rel="stylesheet">
     <link href="assets/css/ng-tags-input.css" rel="stylesheet">
+    <link href="bower_components/ag-grid/dist/angularGrid.css" rel="stylesheet">
+    <link href="bower_components/ag-grid/dist/theme-fresh.css" rel="stylesheet">
+
     <!-- Application style sheet -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <link href="style-3.css" rel="stylesheet">
@@ -144,6 +147,7 @@
 <script src="assets/js/angular/angular-recursion.min.js"></script>
 <script src="bower_components/angular-validation/dist/angular-validation.js"></script>
 <script src="bower_components/angular-validation/dist/angular-validation-rule.js"></script>
+<script src="bower_components/ag-grid/dist/angularGrid.js"></script>
 <script src="assets/js/ng-tags-input.js"></script>
 <!-- endbuild -->
 
