--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -1,68 +1,19 @@
-<!--<div class="panel panel-primary">-->
-<!--<div class="panel-heading reviews-color home-panel-heading">-->
-<!--<i class="fa fa-fw fa-comment bold"></i>-->
-<!--<span>-->
-<!--Reviews-->
-<!--({{(project.reviews | byKey: 'status': 'open').length}})-->
-<!--</span>-->
-<!--<span ng-if="false" class="pull-right bar-control">-->
-<!--<a ng-click="splitScreen('reviews', 'column1')">-->
-<!--<i class="fa fa-fw"-->
-<!--ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>-->
-<!--</a>-->
-<!--<a ng-click="minimize()">-->
-<!--<i class="fa fa-fw fa-minus"></i>-->
-<!--</a>-->
-<!--<a ng-click="toggleExpanded()">-->
-<!--<i class="fa fa-fw"-->
-<!--ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>-->
-<!--</a>-->
-<!--</span>-->
-<!--<input type="text" ng-model="search" class="pull-right col-xs-4"-->
-<!--placeholder="Search reviews...">-->
-<!--<span class="add-item pull-right">-->
-<!--<a ng-click="createReview()" title="Add Review">-->
-<!--<i class="fa fa-fw fa-plus"></i>-->
-<!--</a>-->
-<!--</span>-->
-<!--</div>-->
-<!--<div class="panel-body home-panel-body" ng-class="{'no-max-height': isExpanded()}">-->
-<!--<ul class="list-unstyled">-->
-<!--<li style="padding-top:10px;" ng-show="bk.createReview" >-->
-<!--<create-review bk="bk"></create-review>-->
-<!--</li>-->
-<!--<li class="home-item"-->
-<!--ng-class="{'open-item-details': review.showDetails}"-->
-<!--ng-repeat="review in project.reviews | byKey: 'status': 'open' | filter:search | event: project.date: project.nextdate as reviews">-->
-<!--<display-review review="review" show-sideboard="true"></display-review>-->
-<!--</li>-->
-<!--<li ng-show="reviews.length === 0" class="home-item">-->
-<!--<div>No reviews.</div>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--</div>-->
-
 <div class="row">
     <div class="panel card" style="border: 1px solid #d3d3d3; box-shadow: 5px 4px 5px #a1a1a1;">
-        <div class="panel-heading" style="padding-top: 20px;border-bottom: 1px solid #dfdfdf">
+        <div class="panel-heading" style="padding-top: 20px;">
             <img style="height: 35px;padding-bottom: 10px;"
                  src="assets/img/splash/review_icon.png">
             <span style="color: #FDAC6B; font-size: 20px;padding-left: 15px;">REVIEW</span>
         </div>
         <div class="panel-body home-panel-body"
              ng-class="{'no-max-height': isExpanded()}">
-            <ul class="list-unstyled">
-                <li class="dashboard-item" style="height: 70px;border-bottom: dotted #d3d3d3;"
-                    ui-sref="projects.project.reviews.edit({'review_id': review.id})"
-                    ng-class="{'open-item-details': review.showDetails}"
-                    ng-repeat="review in project.reviews | byKey: 'status': 'open' | filter:search | event: project.date: project.nextdate as reviews">
-                    <display-review review="review" show-sideboard="true"></display-review>
-                </li>
-                <li ng-show="reviews.length === 0" class="dashboard-item">
-                    <div>No reviews.</div>
-                </li>
-            </ul>
+            <div ng-if="project.reviews.length!== 0" style="width: 100%;height:100%"
+                 angular-grid="gridOptions"
+                 class="ag-fresh ag-basic">
+            </div>
+            <div ng-if="project.reviews.length === 0">
+                  No Reviews.
+            </div>
         </div>
     </div>
 </div>
