updates to the homepage

--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -12,7 +12,7 @@
                  class="ag-fresh ag-basic">
             </div>
             <div ng-if="project.reviews.length === 0">
-                  No Reviews.
+                <p style="padding-left:20px;">No Reviews.</p>
             </div>
         </div>
     </div>
