--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -7,9 +7,12 @@
         </div>
         <div class="panel-body"
              ng-class="{'no-max-height': isExpanded()}">
-            <div style="width: 100%;height:100%"
+            <div ng-if="project.processes.length!== 0" style="width: 100%;height:100%"
                  angular-grid="gridOptions"
                  class="ag-fresh ag-basic">
+            </div>
+            <div ng-if="project.processes.length === 0">
+                <p style="padding-left: 20px;">No Processes.</p>
             </div>
         </div>
     </div>
