--- a/website/app/application/core/projects/project/home/directives/display-process.html
+++ b/website/app/application/core/projects/project/home/directives/display-process.html
@@ -5,11 +5,32 @@
                 <span class="label label-primary"
                       style="background-color:#e26a6a;">Draft</span>
             </span>
-            <span ng-hide="process.process">
+            <span  data-toggle="modal" data-target="#modalOneModal"  ng-hide="process.process">
                 {{process.name | truncate:25:'...':true}}
             </span>
         </span>
         <span class="pull-right">
             <small class="text-muted">{{process.birthtime | toDateString}}</small>
         </span>
+    <div id="modalOneModal"  class="modal fade bg-info" role="dialog" aria-labelledby="modelOneLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="modelOneLabel">{{process.name}}</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        Describe your process here
+                    </div>
+                </div>
+                <!--<div class="modal-footer" id="woModalFoot">-->
+                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                    <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+                <!--</div>-->
+            </div>
+        </div>
+    </div>
+
 </div>
