--- a/website/app/index.html
+++ b/website/app/index.html
@@ -17,6 +17,8 @@
 
     <!-- build:css assets/css/style.css -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <!--<link href="assets/css/bootstrap-modal-bs3patch.css" rel="stylesheet">-->
+    <!--<link href="assets/css/bootstrap-modal.css" rel="stylesheet">-->
     <link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="assets/css/select2/select2.css" rel="stylesheet">
     <link href="assets/css/select2/select2-bootstrap.css" rel="stylesheet">
@@ -131,6 +133,8 @@
 <script src="assets/js/angular/hotkeys.min.js"></script>
 <script src="assets/js/angular/ng-context-menu.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+<!--<script src="assets/js/bootstrap-modalmanager.js"></script>-->
+<!--<script src="assets/js/bootstrap-modal.js"></script>-->
 <script src="assets/js/underscore-min.js"></script>
 <script src="assets/js/underscore.string.min.js"></script>
 <script src="assets/js/angular/socket.js"></script>
